// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing language golang testing file chat-post/default/main.go 1`] = `null`;

exports[`Testing language golang testing file chat-post/documents/main.go 1`] = `null`;

exports[`Testing language golang testing file chat-post/stream/main.go 1`] = `null`;

exports[`Testing language golang testing file chat-post/tools/main.go 1`] = `null`;

exports[`Testing language golang testing file classify-post/main.go 1`] = `null`;

exports[`Testing language golang testing file connector-create/main.go 1`] = `
[Error: Command failed: go run connector-create/main.go
2024/10/28 14:44:44 400: {"message":"a connector url must end with the path /search"}
exit status 1
]
`;

exports[`Testing language golang testing file connector-delete/main.go 1`] = `
[Error: Command failed: go run connector-delete/main.go
2024/10/28 14:44:44 404: {"message":"connector not found, id = connector_id"}
exit status 1
]
`;

exports[`Testing language golang testing file connector-get/main.go 1`] = `
[Error: Command failed: go run connector-get/main.go
2024/10/28 14:44:44 404: {"message":"connector not found, id = connector_id"}
exit status 1
]
`;

exports[`Testing language golang testing file connector-patch/main.go 1`] = `
[Error: Command failed: go run connector-patch/main.go
2024/10/28 14:44:43 404: {"message":"connector not found, id = connector_id"}
exit status 1
]
`;

exports[`Testing language golang testing file connectors-id-oauth-authorize-post/main.go 1`] = `
[Error: Command failed: go run connectors-id-oauth-authorize-post/main.go
2024/10/28 14:44:43 404: {"message":"connector not found, id = connector_id"}
exit status 1
]
`;

exports[`Testing language golang testing file connectors-list/main.go 1`] = `null`;

exports[`Testing language golang testing file dataset-delete/main.go 1`] = `
[Error: Command failed: go run dataset-delete/main.go
2024/10/28 14:44:42 404: {"message":"dataset with the id 'dataset_id' not found"}
exit status 1
]
`;

exports[`Testing language golang testing file dataset-get/main.go 1`] = `
[Error: Command failed: go run dataset-get/main.go
2024/10/28 14:44:42 404: {"message":"dataset with the id 'dataset_id' not found"}
exit status 1
]
`;

exports[`Testing language golang testing file dataset-post/main.go 1`] = `
[Error: Command failed: go run dataset-post/main.go
2024/10/28 14:44:41 400: {"message":"output dataset types are not supported for upload"}
exit status 1
]
`;

exports[`Testing language golang testing file dataset-usage-get/main.go 1`] = `
[Error: Command failed: go run dataset-usage-get/main.go
2024/10/28 14:44:41 json: cannot unmarshal string into Go struct field unmarshaler.organization_usage of type int64
exit status 1
]
`;

exports[`Testing language golang testing file detokenize-post/main.go 1`] = `null`;

exports[`Testing language golang testing file embed-jobs-cancel/main.go 1`] = `
[Error: Command failed: go run embed-jobs-cancel/main.go
2024/10/28 14:44:40 404: {"message":"resource not found: could not find embed job with the ID: embed_job_id"}
exit status 1
]
`;

exports[`Testing language golang testing file embed-jobs-get/main.go 1`] = `
[Error: Command failed: go run embed-jobs-get/main.go
2024/10/28 14:44:40 404: {"message":"resource not found: could not find embed job with the ID: embed_job_id"}
exit status 1
]
`;

exports[`Testing language golang testing file embed-jobs-post/main.go 1`] = `
[Error: Command failed: go run embed-jobs-post/main.go
2024/10/28 14:44:40 400: {"message":"a model parameter is required for this endpoint."}
exit status 1
]
`;

exports[`Testing language golang testing file embed-post/main.go 1`] = `null`;

exports[`Testing language golang testing file emebed-jobs-get/main.go 1`] = `null`;

exports[`Testing language golang testing file finetuning/create-finetuned-model/main.go 1`] = `
[Error: Command failed: go run finetuning/create-finetuned-model/main.go
2024/10/28 14:44:38 400: {"message":"dataset with id \\"my-dataset-id\\" does not exist"}
exit status 1
]
`;

exports[`Testing language golang testing file finetuning/delete-finetuned-model/main.go 1`] = `
[Error: Command failed: go run finetuning/delete-finetuned-model/main.go
2024/10/28 14:44:38 400: {"message":"fine-tuned model ID is not a valid UUID: 'test-id'"}
exit status 1
]
`;

exports[`Testing language golang testing file finetuning/get-finetuned-model/main.go 1`] = `
[Error: Command failed: go run finetuning/get-finetuned-model/main.go
2024/10/28 14:44:37 400: {"message":"finetuned_model.id is not a valid UUID: 'test-id'"}
exit status 1
]
`;

exports[`Testing language golang testing file finetuning/list-events/main.go 1`] = `
[Error: Command failed: go run finetuning/list-events/main.go
2024/10/28 14:44:35 500: {"message":"failed to retrieve total size"}
exit status 1
]
`;

exports[`Testing language golang testing file finetuning/list-finetuned-models/main.go 1`] = `null`;

exports[`Testing language golang testing file finetuning/list-training-step-metrics/main.go 1`] = `
[Error: Command failed: go run finetuning/list-training-step-metrics/main.go
2024/10/28 14:44:32 400: {"message":"invalid finetune ID"}
exit status 1
]
`;

exports[`Testing language golang testing file finetuning/update-finetuned-model/main.go 1`] = `
[Error: Command failed: go run finetuning/update-finetuned-model/main.go
2024/10/28 14:44:31 400: {"message":"finetuned_model.id is not a valid UUID: 'test-id'"}
exit status 1
]
`;

exports[`Testing language golang testing file generate-post/main.go 1`] = `null`;

exports[`Testing language golang testing file models-list-get/main.go 1`] = `null`;

exports[`Testing language golang testing file rerank-post/main.go 1`] = `null`;

exports[`Testing language golang testing file summarize-post/main.go 1`] = `null`;

exports[`Testing language golang testing file tokenize-post/main.go 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/ClassifyPost.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/ConnectorCreate.java 1`] = `
[Error: Command failed: gradle -PmainClass=ConnectorCreate run
Error: Could not find or load main class ConnectorCreate
Caused by: java.lang.ClassNotFoundException: ConnectorCreate

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 3s
]
`;

exports[`Testing language java testing file app/src/main/java/ConnectorDelete.java 1`] = `
[Error: Command failed: gradle -PmainClass=ConnectorDelete run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=connector not found, id = test-id}}
	at com.cohere.api.resources.connectors.ConnectorsClient.delete(ConnectorsClient.java:359)
	at com.cohere.api.resources.connectors.ConnectorsClient.delete(ConnectorsClient.java:317)
	at ConnectorDelete.main(ConnectorDelete.java:8)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 10s
]
`;

exports[`Testing language java testing file app/src/main/java/ConnectorGet.java 1`] = `
[Error: Command failed: gradle -PmainClass=ConnectorGet run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=connector not found, id = test-id}}
	at com.cohere.api.resources.connectors.ConnectorsClient.get(ConnectorsClient.java:278)
	at com.cohere.api.resources.connectors.ConnectorsClient.get(ConnectorsClient.java:237)
	at ConnectorGet.main(ConnectorGet.java:9)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 10s
]
`;

exports[`Testing language java testing file app/src/main/java/ConnectorPatch.java 1`] = `
[Error: Command failed: gradle -PmainClass=ConnectorPatch run

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileJava'.
> Cannot access output property 'destinationDirectory' of task ':app:compileJava'. Accessing unreadable inputs or outputs is not supported. Declare the task as untracked by using Task.doNotTrackState(). For more information, please refer to https://docs.gradle.org/8.10/userguide/incremental_build.html#sec:disable-state-tracking in the Gradle documentation.
   > java.nio.file.NoSuchFileException: /Users/billy/repositories/cohere-developer-experience/snippets/java/app/build/classes/java/main/DatasetDelete.class

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 9s
]
`;

exports[`Testing language java testing file app/src/main/java/ConnectorsIdOauthAuthorizePost.java 1`] = `
[Error: Command failed: gradle -PmainClass=ConnectorsIdOauthAuthorizePost run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=connector not found, id = test-id}}
	at com.cohere.api.resources.connectors.ConnectorsClient.oAuthAuthorize(ConnectorsClient.java:545)
	at com.cohere.api.resources.connectors.ConnectorsClient.oAuthAuthorize(ConnectorsClient.java:499)
	at ConnectorsIdOauthAuthorizePost.main(ConnectorsIdOauthAuthorizePost.java:12)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 12s
]
`;

exports[`Testing language java testing file app/src/main/java/ConnectorsList.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/DatasetDelete.java 1`] = `
[Error: Command failed: gradle -PmainClass=DatasetDelete run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=dataset with the id 'id' not found}}
	at com.cohere.api.resources.datasets.DatasetsClient.delete(DatasetsClient.java:489)
	at com.cohere.api.resources.datasets.DatasetsClient.delete(DatasetsClient.java:447)
	at DatasetDelete.main(DatasetDelete.java:8)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 12s
]
`;

exports[`Testing language java testing file app/src/main/java/DatasetGet.java 1`] = `
[Error: Command failed: gradle -PmainClass=DatasetGet run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=dataset with the id 'dataset_id' not found}}
	at com.cohere.api.resources.datasets.DatasetsClient.get(DatasetsClient.java:408)
	at com.cohere.api.resources.datasets.DatasetsClient.get(DatasetsClient.java:367)
	at DatasetGet.main(DatasetGet.java:9)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 18s
]
`;

exports[`Testing language java testing file app/src/main/java/DatasetPost.java 1`] = `
[Error: Command failed: gradle -PmainClass=DatasetPost run
Exception in thread "main" java.lang.RuntimeException: java.lang.NullPointerException: Cannot invoke "java.io.File.toPath()" because "data" is null
	at com.cohere.api.resources.datasets.DatasetsClient.create(DatasetsClient.java:219)
	at com.cohere.api.resources.datasets.DatasetsClient.create(DatasetsClient.java:165)
	at DatasetPost.main(DatasetPost.java:14)
Caused by: java.lang.NullPointerException: Cannot invoke "java.io.File.toPath()" because "data" is null
	at com.cohere.api.resources.datasets.DatasetsClient.create(DatasetsClient.java:206)
	... 2 more

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 19s
]
`;

exports[`Testing language java testing file app/src/main/java/DatasetUsageGet.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/DetokenizePost.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/EmbedJobsCancel.java 1`] = `
[Error: Command failed: gradle -PmainClass=EmbedJobsCancel run
Error: Could not find or load main class EmbedJobsCancel
Caused by: java.lang.ClassNotFoundException: EmbedJobsCancel

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 7s
]
`;

exports[`Testing language java testing file app/src/main/java/EmbedJobsGet.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/EmbedJobsPost.java 1`] = `
[Error: Command failed: gradle -PmainClass=EmbedJobsPost run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=dataset with id ds.id not found}}
	at com.cohere.api.resources.embedjobs.EmbedJobsClient.create(EmbedJobsClient.java:179)
	at com.cohere.api.resources.embedjobs.EmbedJobsClient.create(EmbedJobsClient.java:132)
	at EmbedJobsPost.main(EmbedJobsPost.java:13)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 37s
]
`;

exports[`Testing language java testing file app/src/main/java/EmbedPost.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/EmebedJobsGet.java 1`] = `
[Error: Command failed: gradle -PmainClass=EmebedJobsGet run
Exception in thread "main" CohereApiApiError{message: NotFoundError, statusCode: 404, body: {message=resource not found: could not find embed job with the ID: job_id}}
	at com.cohere.api.resources.embedjobs.EmbedJobsClient.get(EmbedJobsClient.java:259)
	at com.cohere.api.resources.embedjobs.EmbedJobsClient.get(EmbedJobsClient.java:218)
	at EmebedJobsGet.main(EmebedJobsGet.java:9)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 6s
]
`;

exports[`Testing language java testing file app/src/main/java/GeneratePost.java 1`] = `
[Error: Command failed: gradle -PmainClass=GeneratePost run

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileJava'.
> Cannot access output property 'destinationDirectory' of task ':app:compileJava'. Accessing unreadable inputs or outputs is not supported. Declare the task as untracked by using Task.doNotTrackState(). For more information, please refer to https://docs.gradle.org/8.10/userguide/incremental_build.html#sec:disable-state-tracking in the Gradle documentation.
   > java.nio.file.NoSuchFileException: /Users/billy/repositories/cohere-developer-experience/snippets/java/app/build/classes/java/main/DatasetDelete.class

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 22s
]
`;

exports[`Testing language java testing file app/src/main/java/ModelsListGet.java 1`] = `
[Error: Command failed: gradle -PmainClass=ModelsListGet run
Exception in thread "main" com.cohere.api.core.CohereApiError: Network error executing HTTP request
	at com.cohere.api.resources.models.ModelsClient.list(ModelsClient.java:220)
	at com.cohere.api.resources.models.ModelsClient.list(ModelsClient.java:137)
	at com.cohere.api.resources.models.ModelsClient.list(ModelsClient.java:130)
	at ModelsListGet.main(ModelsListGet.java:9)
Caused by: com.fasterxml.jackson.databind.exc.InvalidFormatException: Cannot deserialize value of type \`com.cohere.api.types.CompatibleEndpoint\` from String "embed_image": not one of the values accepted for Enum class: [rate, summarize, classify, generate, chat, embed, rerank]
 at [Source: (String)"{"models":[{"name":"embed-multilingual-v3.0","endpoints":["embed","classify"],"finetuned":false,"context_length":512,"tokenizer_url":"https://storage.googleapis.com/cohere-public/tokenizers/embed-multilingual-v3.0.json","default_endpoints":[]},{"name":"rerank-multilingual-v3-cophillips","endpoints":["rerank"],"finetuned":false,"context_length":4096,"tokenizer_url":"https://storage.googleapis.com/cohere-public/tokenizers/rerank-multilingual-v3-cophillips.json","default_endpoints":[]},{"name":"emb"[truncated 4086 chars]; line: 1, column: 1211] (through reference chain: com.cohere.api.types.ListModelsResponse$Builder["models"]->java.util.ArrayList[5]->com.cohere.api.types.GetModelResponse$Builder["endpoints"]->java.util.ArrayList[0])
	at com.fasterxml.jackson.databind.exc.InvalidFormatException.from(InvalidFormatException.java:67)
	at com.fasterxml.jackson.databind.DeserializationContext.weirdStringException(DeserializationContext.java:1991)
	at com.fasterxml.jackson.databind.DeserializationContext.handleWeirdStringValue(DeserializationContext.java:1219)
	at com.fasterxml.jackson.databind.deser.std.EnumDeserializer._deserializeAltString(EnumDeserializer.java:357)
	at com.fasterxml.jackson.databind.deser.std.EnumDeserializer._fromString(EnumDeserializer.java:231)
	at com.fasterxml.jackson.databind.deser.std.EnumDeserializer.deserialize(EnumDeserializer.java:198)
	at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer._deserializeFromArray(CollectionDeserializer.java:355)
	at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:244)
	at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:28)
	at com.fasterxml.jackson.databind.deser.std.ReferenceTypeDeserializer.deserialize(ReferenceTypeDeserializer.java:204)
	at com.fasterxml.jackson.databind.deser.impl.MethodProperty.deserializeSetAndReturn(MethodProperty.java:158)
	at com.fasterxml.jackson.databind.deser.BuilderBasedDeserializer.vanillaDeserialize(BuilderBasedDeserializer.java:293)
	at com.fasterxml.jackson.databind.deser.BuilderBasedDeserializer.deserialize(BuilderBasedDeserializer.java:217)
	at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer._deserializeFromArray(CollectionDeserializer.java:355)
	at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:244)
	at com.fasterxml.jackson.databind.deser.std.CollectionDeserializer.deserialize(CollectionDeserializer.java:28)
	at com.fasterxml.jackson.databind.deser.impl.MethodProperty.deserializeSetAndReturn(MethodProperty.java:158)
	at com.fasterxml.jackson.databind.deser.BuilderBasedDeserializer.vanillaDeserialize(BuilderBasedDeserializer.java:293)
	at com.fasterxml.jackson.databind.deser.BuilderBasedDeserializer.deserialize(BuilderBasedDeserializer.java:217)
	at com.fasterxml.jackson.databind.deser.DefaultDeserializationContext.readRootValue(DefaultDeserializationContext.java:322)
	at com.fasterxml.jackson.databind.ObjectMapper._readMapAndClose(ObjectMapper.java:4675)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3630)
	at com.fasterxml.jackson.databind.ObjectMapper.readValue(ObjectMapper.java:3598)
	at com.cohere.api.resources.models.ModelsClient.list(ModelsClient.java:173)
	... 3 more

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 21s
]
`;

exports[`Testing language java testing file app/src/main/java/RerankPost.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/SummarizePost.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/TokenizePost.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/chatpost/Default.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/chatpost/Documents.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/chatpost/Stream.java 1`] = `
[Error: Command failed: gradle -PmainClass=chatpost.Stream run
Exception in thread "main" java.lang.IllegalStateException: closed
	at okio.RealBufferedSource.select(RealBufferedSource.kt:221)
	at okhttp3.internal.Util.readBomAsCharset(Util.kt:265)
	at okhttp3.ResponseBody$BomAwareReader.read(ResponseBody.kt:208)
	at java.base/java.io.Reader.read(Reader.java:212)
	at java.base/java.util.Scanner.readInput(Scanner.java:890)
	at java.base/java.util.Scanner.hasNext(Scanner.java:1454)
	at com.cohere.api.core.Stream$1.hasNext(Stream.java:60)
	at chatpost.Stream.main(Stream.java:37)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 9s
]
`;

exports[`Testing language java testing file app/src/main/java/chatpost/Tools.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/finetuning/CreateFinetunedModel.java 1`] = `
[Error: Command failed: gradle -PmainClass=finetuning.CreateFinetunedModel run
Exception in thread "main" CohereApiApiError{message: BadRequestError, statusCode: 400, body: {message=dataset with id "my-dataset-id" does not exist}}
	at com.cohere.api.resources.finetuning.FinetuningClient.createFinetunedModel(FinetuningClient.java:156)
	at com.cohere.api.resources.finetuning.FinetuningClient.createFinetunedModel(FinetuningClient.java:121)
	at finetuning.CreateFinetunedModel.main(CreateFinetunedModel.java:13)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 11s
]
`;

exports[`Testing language java testing file app/src/main/java/finetuning/DeleteFinetunedModel.java 1`] = `
[Error: Command failed: gradle -PmainClass=finetuning.DeleteFinetunedModel run
Error: Could not find or load main class finetuning.DeleteFinetunedModel
Caused by: java.lang.ClassNotFoundException: finetuning.DeleteFinetunedModel

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 6s
]
`;

exports[`Testing language java testing file app/src/main/java/finetuning/GetFinetunedModel.java 1`] = `
[Error: Command failed: gradle -PmainClass=finetuning.GetFinetunedModel run

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileJava'.
> Cannot access output property 'destinationDirectory' of task ':app:compileJava'. Accessing unreadable inputs or outputs is not supported. Declare the task as untracked by using Task.doNotTrackState(). For more information, please refer to https://docs.gradle.org/8.10/userguide/incremental_build.html#sec:disable-state-tracking in the Gradle documentation.
   > java.nio.file.NoSuchFileException: /Users/billy/repositories/cohere-developer-experience/snippets/java/app/build/classes/java/main/DatasetDelete.class

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 4s
]
`;

exports[`Testing language java testing file app/src/main/java/finetuning/ListEvents.java 1`] = `
[Error: Command failed: gradle -PmainClass=finetuning.ListEvents run
Exception in thread "main" CohereApiApiError{message: InternalServerError, statusCode: 500, body: {message=failed to retrieve total size}}
	at com.cohere.api.resources.finetuning.FinetuningClient.listEvents(FinetuningClient.java:428)
	at com.cohere.api.resources.finetuning.FinetuningClient.listEvents(FinetuningClient.java:377)
	at com.cohere.api.resources.finetuning.FinetuningClient.listEvents(FinetuningClient.java:372)
	at finetuning.ListEvents.main(ListEvents.java:11)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 19s
]
`;

exports[`Testing language java testing file app/src/main/java/finetuning/ListFinetunedModels.java 1`] = `null`;

exports[`Testing language java testing file app/src/main/java/finetuning/ListTrainingStepMetrics.java 1`] = `
[Error: Command failed: gradle -PmainClass=finetuning.ListTrainingStepMetrics run
Exception in thread "main" CohereApiApiError{message: BadRequestError, statusCode: 400, body: {message=invalid finetune ID}}
	at com.cohere.api.resources.finetuning.FinetuningClient.listTrainingStepMetrics(FinetuningClient.java:490)
	at com.cohere.api.resources.finetuning.FinetuningClient.listTrainingStepMetrics(FinetuningClient.java:453)
	at com.cohere.api.resources.finetuning.FinetuningClient.listTrainingStepMetrics(FinetuningClient.java:446)
	at finetuning.ListTrainingStepMetrics.main(ListTrainingStepMetrics.java:12)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 6s
]
`;

exports[`Testing language java testing file app/src/main/java/finetuning/UpdateFinetunedModel.java 1`] = `
[Error: Command failed: gradle -PmainClass=finetuning.UpdateFinetunedModel run
Exception in thread "main" CohereApiApiError{message: BadRequestError, statusCode: 400, body: {message=finetuned_model.id is not a valid UUID: 'test-id'}}
	at com.cohere.api.resources.finetuning.FinetuningClient.updateFinetunedModel(FinetuningClient.java:342)
	at com.cohere.api.resources.finetuning.FinetuningClient.updateFinetunedModel(FinetuningClient.java:305)
	at finetuning.UpdateFinetunedModel.main(UpdateFinetunedModel.java:17)

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:run'.
> Process 'command '/Users/billy/.gradle/jdks/eclipse_adoptium-21-aarch64-os_x.2/jdk-21.0.4+7/Contents/Home/bin/java'' finished with non-zero exit value 1

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 7s
]
`;

exports[`Testing language node testing file chat-post/default.js 1`] = `null`;

exports[`Testing language node testing file chat-post/documents.js 1`] = `null`;

exports[`Testing language node testing file chat-post/stream.js 1`] = `
[Error: Command failed: node chat-post/stream.js
node:internal/streams/writable:474
      throw new ERR_INVALID_ARG_TYPE(
            ^

TypeError [ERR_INVALID_ARG_TYPE]: The "chunk" argument must be of type string or an instance of Buffer, TypedArray, or DataView. Received an instance of Object
    at _write (node:internal/streams/writable:474:13)
    at Writable.write (node:internal/streams/writable:502:10)
    at file:///Users/billy/repositories/cohere-developer-experience/snippets/node/chat-post/stream.js:23:22
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  code: 'ERR_INVALID_ARG_TYPE'
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file chat-post/tools.js 1`] = `null`;

exports[`Testing language node testing file classify-post.js 1`] = `null`;

exports[`Testing language node testing file connector-create.js 1`] = `
[Error: Command failed: node connector-create.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:256
                        throw new Cohere.BadRequestError(_response.error.body);
                              ^

BadRequestError: BadRequestError
Status code: 400
Body: {
  "message": "connector not reachable at https://example.com/search. error: request failed with status code 405"
}
    at Connectors.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:256:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 400,
  body: {
    message: 'connector not reachable at https://example.com/search. error: request failed with status code 405'
  }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file connector-delete.js 1`] = `
[Error: Command failed: node connector-delete.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:522
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "connector not found, id = connector-id"
}
    at Connectors.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:522:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: { message: 'connector not found, id = connector-id' }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file connector-get.js 1`] = `
[Error: Command failed: node connector-get.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:392
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "connector not found, id = connector-id"
}
    at Connectors.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:392:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: { message: 'connector not found, id = connector-id' }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file connector-patch.js 1`] = `
[Error: Command failed: node connector-patch.js
file:///Users/billy/repositories/cohere-developer-experience/snippets/node/connector-patch.js:8
  const connector = await cohere.connectors.update(connector.id, {
                                                   ^

ReferenceError: Cannot access 'connector' before initialization
    at file:///Users/billy/repositories/cohere-developer-experience/snippets/node/connector-patch.js:8:52
    at file:///Users/billy/repositories/cohere-developer-experience/snippets/node/connector-patch.js:14:3
    at ModuleJob.run (node:internal/modules/esm/module_job:222:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:316:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.13.0
]
`;

exports[`Testing language node testing file connectors-id-oauth-authorize-post.js 1`] = `
[Error: Command failed: node connectors-id-oauth-authorize-post.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:795
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "connector not found, id = connector-id"
}
    at Connectors.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:795:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/connectors/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: { message: 'connector not found, id = connector-id' }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file connectors-list.js 1`] = `null`;

exports[`Testing language node testing file dataset-get.js 1`] = `
[Error: Command failed: node dataset-get.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/datasets/client/Client.js:560
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "dataset with the id '<<datasetId>>' not found"
}
    at Datasets.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/datasets/client/Client.js:560:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/datasets/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: { message: "dataset with the id '<<datasetId>>' not found" }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file dataset-post.js 1`] = `
[Error: Command failed: node dataset-post.js
file:///Users/billy/repositories/cohere-developer-experience/snippets/node/dataset-post.js:2
const fs = require('fs');
           ^

ReferenceError: require is not defined in ES module scope, you can use import instead
This file is being treated as an ES module because it has a '.js' file extension and '/Users/billy/repositories/cohere-developer-experience/package.json' contains "type": "module". To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///Users/billy/repositories/cohere-developer-experience/snippets/node/dataset-post.js:2:12
    at ModuleJob.run (node:internal/modules/esm/module_job:222:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:316:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.13.0
]
`;

exports[`Testing language node testing file dataset-usage-get.js 1`] = `null`;

exports[`Testing language node testing file detokenize-post.js 1`] = `null`;

exports[`Testing language node testing file embed-jobs-cancel.js 1`] = `
[Error: Command failed: node embed-jobs-cancel.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:507
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "resource not found: could not find embed job with the ID: job_id"
}
    at EmbedJobs.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:507:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: {
    message: 'resource not found: could not find embed job with the ID: job_id'
  }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file embed-jobs-get.js 1`] = `null`;

exports[`Testing language node testing file embed-jobs-post.js 1`] = `
[Error: Command failed: node embed-jobs-post.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:253
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "dataset with id my-dataset not found"
}
    at EmbedJobs.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:253:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: { message: 'dataset with id my-dataset not found' }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file embed-post.js 1`] = `null`;

exports[`Testing language node testing file emebed-jobs-get.js 1`] = `
[Error: Command failed: node emebed-jobs-get.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:383
                        throw new Cohere.NotFoundError(_response.error.body);
                              ^

NotFoundError: NotFoundError
Status code: 404
Body: {
  "message": "resource not found: could not find embed job with the ID: job_id"
}
    at EmbedJobs.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:383:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/embedJobs/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 404,
  body: {
    message: 'resource not found: could not find embed job with the ID: job_id'
  }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file finetuning/create-finetuned-model.js 1`] = `
[Error: Command failed: node finetuning/create-finetuned-model.js
file:///Users/billy/repositories/cohere-developer-experience/snippets/node/finetuning/create-finetuned-model.js:12
        base_type: Cohere.Finetuning.BaseType.BaseTypeChat,
                                     ^

TypeError: Cannot read properties of undefined (reading 'BaseType')
    at file:///Users/billy/repositories/cohere-developer-experience/snippets/node/finetuning/create-finetuned-model.js:12:38
    at file:///Users/billy/repositories/cohere-developer-experience/snippets/node/finetuning/create-finetuned-model.js:19:3
    at ModuleJob.run (node:internal/modules/esm/module_job:222:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:316:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.13.0
]
`;

exports[`Testing language node testing file finetuning/delete-finetuned-model.js 1`] = `
[Error: Command failed: node finetuning/delete-finetuned-model.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:379
                        throw new Cohere.BadRequestError(_response.error.body);
                              ^

BadRequestError: BadRequestError
Status code: 400
Body: {
  "message": "fine-tuned model ID is not a valid UUID: 'test-id'"
}
    at Finetuning.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:379:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 400,
  body: { message: "fine-tuned model ID is not a valid UUID: 'test-id'" }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file finetuning/get-finetuned-model.js 1`] = `
[Error: Command failed: node finetuning/get-finetuned-model.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:296
                        throw new Cohere.BadRequestError(_response.error.body);
                              ^

BadRequestError: BadRequestError
Status code: 400
Body: {
  "message": "finetuned_model.id is not a valid UUID: 'test-id'"
}
    at Finetuning.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:296:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 400,
  body: { message: "finetuned_model.id is not a valid UUID: 'test-id'" }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file finetuning/list-events.js 1`] = `
[Error: Command failed: node finetuning/list-events.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:580
                        throw new Cohere.InternalServerError(_response.error.body);
                              ^

InternalServerError: InternalServerError
Status code: 500
Body: {
  "message": "failed to retrieve total size"
}
    at Finetuning.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:580:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 500,
  body: { message: 'failed to retrieve total size' }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file finetuning/list-finetuned-models.js 1`] = `null`;

exports[`Testing language node testing file finetuning/list-training-step-metrics.js 1`] = `
[Error: Command failed: node finetuning/list-training-step-metrics.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:665
                        throw new Cohere.BadRequestError(_response.error.body);
                              ^

BadRequestError: BadRequestError
Status code: 400
Body: {
  "message": "invalid finetune ID"
}
    at Finetuning.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:665:31)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:31:58)
    at process.processTicksAndRejections (node:internal/process/task_queues:95:5) {
  statusCode: 400,
  body: { message: 'invalid finetune ID' }
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file finetuning/update-finetuned-model.js 1`] = `
[Error: Command failed: node finetuning/update-finetuned-model.js
/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/core/schemas/builders/schema-utils/getSchemaUtils.js:23
            throw new JsonError_1.JsonError(raw.errors);
                  ^

JsonError: Missing required key "settings"
    at Object.jsonOrThrow (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/core/schemas/builders/schema-utils/getSchemaUtils.js:23:19)
    at Finetuning.<anonymous> (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:455:73)
    at Generator.next (<anonymous>)
    at fulfilled (/Users/billy/repositories/cohere-developer-experience/node_modules/.pnpm/cohere-ai@7.14.0_@aws-sdk+client-sso-oidc@3.679.0_@aws-sdk+client-sts@3.679.0_/node_modules/cohere-ai/api/resources/finetuning/client/Client.js:31:58) {
  errors: [ { path: [], message: 'Missing required key "settings"' } ]
}

Node.js v20.13.0
]
`;

exports[`Testing language node testing file generate-post.js 1`] = `null`;

exports[`Testing language node testing file models-list-get.js 1`] = `null`;

exports[`Testing language node testing file rerank-post.js 1`] = `null`;

exports[`Testing language node testing file summarize-post.js 1`] = `null`;

exports[`Testing language node testing file tokenize-post.js 1`] = `null`;

exports[`Testing language python testing file chat-post.py 1`] = `null`;

exports[`Testing language python testing file chat-post/default.py 1`] = `null`;

exports[`Testing language python testing file chat-post/documents.py 1`] = `null`;

exports[`Testing language python testing file chat-post/stream.py 1`] = `null`;

exports[`Testing language python testing file chat-post/tools.py 1`] = `null`;

exports[`Testing language python testing file classify-post.py 1`] = `null`;

exports[`Testing language python testing file connector-create.py 1`] = `
[Error: Command failed: poetry run python connector-create.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/connector-create.py", line 4, in <module>
    response = co.connectors.create(
               ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/connectors/client.py", line 307, in create
    raise BadRequestError(
cohere.errors.bad_request_error.BadRequestError: status_code: 400, body: {'message': 'connector not reachable at https://connector-example.com/search. error: Post "https://connector-example.com/search": Internal Server Error'}
]
`;

exports[`Testing language python testing file connector-delete.py 1`] = `
[Error: Command failed: poetry run python connector-delete.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/connector-delete.py", line 4, in <module>
    co.connectors.delete("test-id")
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/connectors/client.py", line 653, in delete
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': 'connector not found, id = test-id'}
]
`;

exports[`Testing language python testing file connector-get.py 1`] = `
[Error: Command failed: poetry run python connector-get.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/connector-get.py", line 4, in <module>
    response = co.connectors.get("test-id")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/connectors/client.py", line 495, in get
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': 'connector not found, id = test-id'}
]
`;

exports[`Testing language python testing file connector-patch.py 1`] = `
[Error: Command failed: poetry run python connector-patch.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/connector-patch.py", line 4, in <module>
    response = co.connectors.update(
               ^^^^^^^^^^^^^^^^^^^^^
TypeError: ConnectorsClient.update() got an unexpected keyword argument 'connector_id'
]
`;

exports[`Testing language python testing file connectors-id-oauth-authorize-post.py 1`] = `
[Error: Command failed: poetry run python connectors-id-oauth-authorize-post.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/connectors-id-oauth-authorize-post.py", line 4, in <module>
    response = co.connectors.o_auth_authorize(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: ConnectorsClient.o_auth_authorize() got an unexpected keyword argument 'connector_id'
]
`;

exports[`Testing language python testing file connectors-list.py 1`] = `null`;

exports[`Testing language python testing file dataset-delete.py 1`] = `
[Error: Command failed: poetry run python dataset-delete.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/dataset-delete.py", line 6, in <module>
    co.datasets.delete("id")
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/datasets/client.py", line 840, in delete
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': "dataset with the id 'id' not found"}
]
`;

exports[`Testing language python testing file dataset-get.py 1`] = `
[Error: Command failed: poetry run python dataset-get.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/dataset-get.py", line 6, in <module>
    response = co.datasets.get(id="<<datasetId>>")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/datasets/client.py", line 681, in get
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': "dataset with the id '<<datasetId>>' not found"}
]
`;

exports[`Testing language python testing file dataset-post.py 1`] = `
[Error: Command failed: poetry run python dataset-post.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/dataset-post.py", line 8, in <module>
    data=open("./chat.jsonl", "rb"),
         ^^^^^^^^^^^^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: './chat.jsonl'
]
`;

exports[`Testing language python testing file dataset-usage-get.py 1`] = `null`;

exports[`Testing language python testing file detokenize-post.py 1`] = `null`;

exports[`Testing language python testing file embed-jobs-cancel.py 1`] = `
[Error: Command failed: poetry run python embed-jobs-cancel.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/embed-jobs-cancel.py", line 6, in <module>
    co.embed_jobs.cancel("job_id")
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/embed_jobs/client.py", line 630, in cancel
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': 'resource not found: could not find embed job with the ID: job_id'}
]
`;

exports[`Testing language python testing file embed-jobs-get.py 1`] = `null`;

exports[`Testing language python testing file embed-jobs-post.py 1`] = `
[Error: Command failed: poetry run python embed-jobs-post.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/embed-jobs-post.py", line 6, in <module>
    job = co.embed_jobs.create(
          ^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/embed_jobs/client.py", line 321, in create
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': 'dataset with id my-dataset-id not found'}
]
`;

exports[`Testing language python testing file embed-post.py 1`] = `null`;

exports[`Testing language python testing file emebed-jobs-get.py 1`] = `
[Error: Command failed: poetry run python emebed-jobs-get.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/emebed-jobs-get.py", line 6, in <module>
    response = co.embed_jobs.get("job_id")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/embed_jobs/client.py", line 479, in get
    raise NotFoundError(
cohere.errors.not_found_error.NotFoundError: status_code: 404, body: {'message': 'resource not found: could not find embed job with the ID: job_id'}
]
`;

exports[`Testing language python testing file finetuning/create-finetuned-model.py 1`] = `
[Error: Command failed: poetry run python finetuning/create-finetuned-model.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/finetuning/create-finetuned-model.py", line 17, in <module>
    finetuned_model = co.finetuning.create_finetuned_model(
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/finetuning/client.py", line 220, in create_finetuned_model
    raise BadRequestError(
cohere.errors.bad_request_error.BadRequestError: status_code: 400, body: {'message': 'proto:\\xa0(line 1:258): unknown field "train_epoch"'}
]
`;

exports[`Testing language python testing file finetuning/delete-finetuned-model.py 1`] = `
[Error: Command failed: poetry run python finetuning/delete-finetuned-model.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/finetuning/delete-finetuned-model.py", line 4, in <module>
    co.finetuning.delete_finetuned_model("test-id")
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/finetuning/client.py", line 436, in delete_finetuned_model
    raise BadRequestError(
cohere.errors.bad_request_error.BadRequestError: status_code: 400, body: {'message': "fine-tuned model ID is not a valid UUID: 'test-id'"}
]
`;

exports[`Testing language python testing file finetuning/get-finetuned-model.py 1`] = `
[Error: Command failed: poetry run python finetuning/get-finetuned-model.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/finetuning/get-finetuned-model.py", line 4, in <module>
    response = co.finetuning.get_finetuned_model("test-id")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/finetuning/client.py", line 328, in get_finetuned_model
    raise BadRequestError(
cohere.errors.bad_request_error.BadRequestError: status_code: 400, body: {'message': "finetuned_model.id is not a valid UUID: 'test-id'"}
]
`;

exports[`Testing language python testing file finetuning/list-events.py 1`] = `
[Error: Command failed: poetry run python finetuning/list-events.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/finetuning/list-events.py", line 4, in <module>
    response = co.finetuning.list_events(finetuned_model_id="test-id")
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/finetuning/client.py", line 779, in list_events
    raise InternalServerError(
cohere.errors.internal_server_error.InternalServerError: status_code: 500, body: {'message': 'failed to retrieve total size'}
]
`;

exports[`Testing language python testing file finetuning/list-finetuned-models.py 1`] = `null`;

exports[`Testing language python testing file finetuning/list-training-step-metrics.py 1`] = `
[Error: Command failed: poetry run python finetuning/list-training-step-metrics.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/finetuning/list-training-step-metrics.py", line 4, in <module>
    train_step_metrics = co.finetuning.list_training_step_metrics(
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/finetuning/client.py", line 862, in list_training_step_metrics
    raise BadRequestError(
cohere.errors.bad_request_error.BadRequestError: status_code: 400, body: {'message': 'invalid finetune ID'}
]
`;

exports[`Testing language python testing file finetuning/update-finetuned-model.py 1`] = `
[Error: Command failed: poetry run python finetuning/update-finetuned-model.py
Traceback (most recent call last):
  File "/Users/billy/repositories/cohere-developer-experience/snippets/python/finetuning/update-finetuned-model.py", line 8, in <module>
    finetuned_model = co.finetuning.update_finetuned_model(
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/billy/Library/Caches/pypoetry/virtualenvs/py-snips-je53b3MO-py3.11/lib/python3.11/site-packages/cohere/finetuning/client.py", line 605, in update_finetuned_model
    raise BadRequestError(
cohere.errors.bad_request_error.BadRequestError: status_code: 400, body: {'message': "finetuned_model.id is not a valid UUID: 'test-id'"}
]
`;

exports[`Testing language python testing file generate-post.py 1`] = `null`;

exports[`Testing language python testing file models-list-get.py 1`] = `null`;

exports[`Testing language python testing file rerank-post.py 1`] = `null`;

exports[`Testing language python testing file summarize-post.py 1`] = `null`;

exports[`Testing language python testing file tokenize-post.py 1`] = `null`;
